try fix edit covered 4

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -101,19 +101,22 @@
   width: 16px;
   margin-top: 7px;
   margin-right: 8px;
-  z-index: 2;
+  z-index: 1;
+}
+
+.edit-input-box {
+  width: 80%;
+  height: 30px;
+  margin-left: -10px;
+  margin-top: 0px;
 }
 
 .edit-input {
-  width: 80%;
-  height: 20px;
-  margin-left: -10px;
-  margin-top: -10px;
   border-width: 0px;
+  height: 30px;
   box-shadow:#f6f6f6;
   color: #d2d6da;
   background-color: #f6f6f6;
-  z-index: 1;
 }
 
 .form-control:focus {
